adding relative filepaths

--- a/extra/index.html
+++ b/extra/index.html
@@ -46,13 +46,13 @@
         </div> 
  
         <div class="topnav twelve columns" id="myTopnav">
-            <a href="/">Home</a>
-            <a href="/research">Research</a>
-            <a href="/publications">Publications</a>
-            <a href="/people">People</a>
-            <a href="/opportunities">Opportunities</a>
-            <a href="/contact">Contact</a>
-            <a href="/extra" class="active"><u>Extra Fun Stuff</u></a>
+            <a href="./">Home</a>
+            <a href="./research">Research</a>
+            <a href="./publications">Publications</a>
+            <a href="./people">People</a>
+            <a href="./opportunities">Opportunities</a>
+            <a href="./contact">Contact</a>
+            <a href="./extra" class="active"><u>Extra Fun Stuff</u></a>
             <a href="javascript:void(0);" class="icon" onclick="menu_change()">
                 <i class="fa fa-bars"></i>
             </a>
