--- a/publications/index.html
+++ b/publications/index.html
@@ -46,13 +46,13 @@
         </div> 
  
         <div class="topnav twelve columns" id="myTopnav">
-            <a href="./">Home</a>
-            <a href="./research">Research</a>
-            <a href="./publications"  class="active"><u>Publications</u></a>
-            <a href="./people">People</a>
-            <a href="./opportunities">Opportunities</a>
-            <a href="./contact">Contact</a>
-            <a href="./extra">Extra Fun Stuff</a>
+            <a href="../">Home</a>
+            <a href="../research">Research</a>
+            <a href="../publications"  class="active"><u>Publications</u></a>
+            <a href="../people">People</a>
+            <a href="../opportunities">Opportunities</a>
+            <a href="../contact">Contact</a>
+            <a href="../extra">Extra Fun Stuff</a>
             <a href="javascript:void(0);" class="icon" onclick="menu_change()">
                 <i class="fa fa-bars"></i>
             </a>
