--- a/people/index.html
+++ b/people/index.html
@@ -73,8 +73,8 @@
         </div>
         <div class="seven columns">
             <p1><b>Michael Desai</b></p1><br />
-            <p2>Principle Investigator</p2><br />
-            <p3><i>mdesai[at]oeb.harvard.edu</i></p3>
+            <p2>Professor of Organismic and Evolutionary Biology and of Physics</p2><br />
+            <p3><i>mdesai [at] oeb.harvard.edu</i></p3>
         </div>
     </div>
     <div class="row people_row">
@@ -85,7 +85,7 @@
             <p1><b>Jenn Thomson</b></p1><br />
             <p2>Administrative Assistant</p2>
             <p>Jenn keeps the lab running.</p>
-            <p3><i>jthomson[at]oeb.harvard.edu</i></p3>
+            <p3><i>jthomson [at] oeb.harvard.edu</i></p3>
         </div>
     </div>
     <div class="row people_row">
@@ -96,7 +96,7 @@
             <p1><b>Alex Nguyen-Ba</b></p1><br />
             <p2>Postdoctoral  Fellow</p2>
             <p>Alex got his B.Sc. in Biology at the University of Toronto, and did his Ph.D. in Alan Moses' lab at the University of Toronto. He is interested in characterizing patterns of epistasis in budding yeast, in the evolution of complex mating systems, and a variety of other topics related to evolutionary dynamics and experimental evolution.</p>
-            <p3><i>nnguyenba[at]fas.harvard.edu</i></p3>
+            <p3><i>nnguyenba [at] fas.harvard.edu</i></p3>
         </div>
     </div>
     <div class="row people_row">
@@ -107,7 +107,7 @@
             <p1><b>Parris Humphrey</b></p1><br />
             <p2>Postdoctoral  Fellow</p2>
             <p>Parris received his B.A. in Biology from Bard College in 2006. He did his graduate work in Ecology and Evolutionary Biology with Noah Whiteman at the University of Arizona, and received his Ph.D. in 2015. He joined the Desai lab in August 2015.</p>
-            <p3><i>phumphrey[at]fas.harvard.edu</i></p3>
+            <p3><i>phumphrey [at] fas.harvard.edu</i></p3>
         </div>
     </div>    
     <div class="row people_row">
@@ -118,20 +118,9 @@
             <p1><b>Angela Phillips</b></p1><br />
             <p2>Postdoctoral Fellow</p2>
             <p>Angela joined the Desai lab as a postdoctoral fellow in June 2018. She earned her Ph.D. in Biological Chemistry at MIT in Matthew Shoulders’s lab, where she applied chemical biology tools to profile the impact of host protein-folding factors on viral protein evolution. Angela is interested in the defining factors of fitness landscapes, particularly in the context of pathogen evolution.</p>
-            <p3><i>aphillips[at]fas.harvard.edu</i></p3>
+            <p3><i>aphillips [at] fas.harvard.edu</i></p3>
         </div>
     </div>
-    <div class="row people_row">
-        <div class="two columns">
-            <img src='headshots/han.jpeg' style="width:100%">
-        </div>
-        <div class="seven columns">
-            <p1><b>Han-Ying Jhuang</b></p1><br />
-            <p2>Postdoctoral Fellow</p2>
-            <p>Han-Ying joined the Desai and Springer labs as a joint postdoc in May 2017. He completed his PhD in Jun-Yi Leu's lab in Taiwan in Jan, 2017 while he was studying post-zygotic reproductive barrier using yeasts as a model organism. His current research focuses on employing cutting-edge CRISPR and lineage-barcoding systems to construct fitness landscapes and to address evolutionary questions.</p>
-            <p3><i>hanningjuang[at]gmail.com</i></p3>
-        </div>
-    </div>    
     <div class="row people_row">
         <div class="two columns">
             <img src='headshots/ivana.jpg' style="width:100%">
@@ -140,29 +129,7 @@
             <p1><b>Ivana Cvijovic</b></p1><br />
             <p2>Graduate Student in Systems Biology</p2>
             <p>Ivana received her B.A. and M.Sc. from Cambridge University in 2013. She joined the Desai lab in 2014, and is currently working on theoretical models of evolution in fluctuating environment, and is interested generally in theoretical population genetics.</p>
-            <p3><i>icvijovic[at]fas.harvard.edu</i></p3>
-        </div>
-    </div>
-    <div class="row people_row">
-        <div class="two columns">
-            <img src='headshots/milo.jpg' style="width:100%">
-        </div>
-        <div class="seven columns">
-            <p1><b>Milo Johnson</b></p1><br />
-            <p2>Graduate Student in Organismic and Evolutionary Biology</p2>
-            <p>Milo received his B.A. from Dartmouth College in 2014. He joined the Desai lab in 2015 and is using experimental evolution in budding yeast to characterize the pleiotropic effects of adaptive mutations across diverse environmental conditions.</p>
-            <p3><i>milo.s.johnson.13[at]gmail.com</i></p3>
-        </div>
-    </div>    
-    <div class="row people_row">
-        <div class="two columns">
-            <img src='headshots/baker.jpg' style="width:100%">
-        </div>
-        <div class="seven columns">
-            <p1><b>Christopher Bakerlee</b></p1><br />
-            <p2>Graduate Student in Molecules, Cells, and Organisms</p2>
-            <p>Chris received an A.B. in Biology from Brown University in 2012. He joined the Desai lab in 2016, and he is using budding yeast to understand epistasis and the evolutionary dynamics of "selfish genetic elements" (e.g., retrotransposons).</p>
-            <p3><i>baker03[at]g.harvard.edu</i></p3>
+            <p3><i>icvijovic [at] fas.harvard.edu</i></p3>
         </div>
     </div>
     <div class="row people_row">
@@ -173,8 +140,97 @@
             <p1><b>Matthew Melissa</b></p1><br />
             <p2>Graduate Student in Physics</p2>
             <p>Matthew received his B.S. in Engineering Physics from UC Berkeley in 2014. He joined the Desai Lab in October 2015, and is interested in using yeast surface display to characterize antibody-antigen binding affinities.</p>
-            <p3><i>mjmel[at]fas.harvard.edu</i></p3>
+            <p3><i>mjmel [at] fas.harvard.edu</i></p3>
         </div>
+    </div>
+    <div class="row people_row">
+        <div class="two columns">
+            <img src='headshots/milo.jpg' style="width:100%">
+        </div>
+        <div class="seven columns">
+            <p1><b>Milo Johnson</b></p1><br />
+            <p2>Graduate Student in Organismic and Evolutionary Biology</p2>
+            <p>Milo received his B.A. from Dartmouth College in 2014. He joined the Desai lab in 2015 and is using experimental evolution in budding yeast to characterize the pleiotropic effects of adaptive mutations across diverse environmental conditions.</p>
+            <p3><i>milo.s.johnson.13 [at] gmail.com</i></p3>
+        </div>
+    </div>    
+    <div class="row people_row">
+        <div class="two columns">
+            <img src='headshots/baker.jpg' style="width:100%">
+        </div>
+        <div class="seven columns">
+            <p1><b>Christopher Bakerlee</b></p1><br />
+            <p2>Graduate Student in Molecules, Cells, and Organisms</p2>
+            <p>Chris received an A.B. in Biology from Brown University in 2012. He joined the Desai lab in 2016, and he is using budding yeast to understand epistasis and the evolutionary dynamics of "selfish genetic elements" (e.g., retrotransposons).</p>
+            <p3><i>baker03 [at] g.harvard.edu</i></p3>
+        </div>
+    </div>
+    <div class="row people_row">
+        <div class="two columns">
+            <img src='headshots/nophoto.jpg' style="width:100%">
+        </div>
+        <div class="seven columns">
+            <p1><b>Katherine R. Lawrence</b></p1><br />
+            <p2>Graduate Student in Physics (MIT)</p2>
+            <p></p>
+            <p3><i>klawrenc [at] mit.edu</i></p3>
+        </div>
+    </div>
+    <div class="row people_row">
+        <div class="two columns">
+            <img src='headshots/nophoto.jpg' style="width:100%">
+        </div>
+        <div class="seven columns">
+            <p1><b>Michael Miyagi</b></p1><br />
+            <p2>Graduate Student in Organismic and Evolutionary Biology</p2>
+            <p></p>
+            <p3><i>michael.miyagi [at] gmail.com</i></p3>
+        </div>
+    </div>
+    <div class="row people_row">
+        <div class="two columns">
+            <img src='headshots/nophoto.jpg' style="width:100%">
+        </div>
+        <div class="seven columns">
+            <p1><b>Artur Rego-Costa</b></p1><br />
+            <p2>Graduate Student in Organismic and Evolutionary Biology</p2>
+            <p></p>
+            <p3><i>arturregocosta [at] gmail.com</i></p3>
+        </div>
+    </div>
+
+    <div class="alumni">
+        <p><strong><u>Lab Alumni</u><p></strong>
+        <p><strong><a href="https://www.mcdonald-lab.com">Michael J. McDonald</strong></a><br />
+        Assistant Professor, Monash University.</p>
+        <p><strong><a href="http://sklab.science">Sergey Kryazhimskiy</strong></a><br />
+        Assistant Professor, University of California San Diego.</p>
+        <p><strong><a href="http://unipedalape.weebly.com/">J. David van Dyken</strong></a><br />
+        Assistant Professor, University of Miami.</p>
+        <p><strong><a href="http://www.perronlab.org">Gabriel Perron</strong></a><br />
+        Assistant Professor, Bard College.</p>
+        <p><strong><a href="http://www.ch.cam.ac.uk/person/ljc37">Lucy Colwell</strong></a><br />
+        Lecturer (Assistant Professor), Cambridge University.</p>
+        <p><strong>Ramya Purkanti</strong><br />
+        Postdoc, Vastenhouw lab, Max-Planck Institute of Molecular Cell Biology and Genetics.</p>
+        <p><strong><a href="http://www.laurenatphysics.com/p/about.html">Lauren Nicolaisen</strong></a><br />
+        Data Scientist, Khan Academy.</p>
+        <p><strong><a href="http://hallatscheklab.berkeley.edu/people/benjamin-good/">Benjamin H. Good</strong></a><br />
+        Miller Fellow, UC Berkeley.</p>
+        <p><strong><a href="https://quakelab.stanford.edu/people/elizabeth-jerison">Elizabeth R. Jerison</strong></a><br />
+        Postdoc, Quake Lab, Stanford University.</p>
+        <p><strong>Evgeni M. Frenkel</strong><br />
+        Postdoc, Sabatini Lab, Whitehead Institute.</p>
+        <p><strong><a href="http://www.laurenatphysics.com/p/about.html">Katya Kosheleva</strong></a><br />
+        Bioinformatics Scientist, Invitae.</p>
+        <p><strong><a href="https://sites.google.com/site/danielpaulrice/">Daniel P. Rice</strong></a><br />
+        Postdoc, Novembre Lab, University of Chicago.</p>
+        <p><strong><a href="http://jireva.org">Jose I. Rojas Echenique</strong></a><br />
+        Postdoc, Boone Lab, University of Toronto.</p>
+        <p><strong><a href="http://physics.berkeley.edu/people/graduate-student/stephen-martis">Stephen Martis</strong></a><br />
+        Graduate Student, UC Berkeley.</p>
+        <p><strong>Ian Ochs</strong></a><br />
+        Graduate Student, Princeton University.</p>
     </div>
 </div>
 
