--- a/contact/index.html
+++ b/contact/index.html
@@ -52,7 +52,7 @@
             <a href="../people">People</a>
             <a href="../opportunities">Opportunities</a>
             <a href="../contact" class="active"><u>Contact</u></a>
-            <a href="../extra">Extra Fun Stuff</a>
+            <a href="../internal">Internal</a>
             <a href="javascript:void(0);" class="icon" onclick="menu_change()">
                 <i class="fa fa-bars"></i>
             </a>
