--- a/internal/index.html
+++ b/internal/index.html
@@ -5,7 +5,7 @@
     <!-- Basic Page Needs
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
     <meta charset="utf-8">
-    <title>Opportunities | Desai Lab</title>
+    <title>Extras | Desai Lab</title>
 
     <!-- Mobile Specific Metas
     –––––––––––––––––––––––––––––––––––––––––––––––––– -->
@@ -50,9 +50,9 @@
             <a href="../research">Research</a>
             <a href="../publications">Publications</a>
             <a href="../people">People</a>
-            <a href="../opportunities"  class="active"><u>Opportunities</u></a>
-            <a href="../contact">Contact</a>
-            <a href="../internal">Internal</a>
+            <a href="../opportunities">Opportunities</a>
+            <a href="../contact" class="active"><u>Contact</u></a>
+            <a href="../internal" class="active"><u>Internal</u></a>
             <a href="javascript:void(0);" class="icon" onclick="menu_change()">
                 <i class="fa fa-bars"></i>
             </a>
@@ -62,23 +62,8 @@
 <div class="container">
     <div class="row">
         <div class="twelve column" style="margin-top: 5%">
-            <h2>Opportunities</h2>
-        </div>
-    </div>
-    <div class="row">
-        <div class="twelve columns opps">
-            <h4>Graduate Students:</h4>
-            <p2>We are always looking for good students to join the lab. Given the interdisciplinary nature of our work, students from a variety of backgrounds (e.g. biology, math, physics, computer science, engineering) are encouraged to apply. The Desai lab is affiliated with a number of graduate programs at Harvard, so there are a number of possible routes to join the lab.  This includes the <a href="http://www.oeb.harvard.edu/">Department of Organismic and Evolutionary Biology</a> (OEB), the <a href="http://www.physics.harvard.edu/academics/grad/">Department of Physics</a>, the <a href="https://www.mcb.harvard.edu/graduate/mco/">Molecules Cells and Organisms</a> (MCO) graduate program, and the <a href="http://sysbiophd.harvard.edu/">Systems Biology</a> program.  Various other programs (e.g. Biophysics or SEAS) are also possible routes to the lab. Potential applicants should contact Michael Desai in advance of submitting their application.  Include a CV and a brief description of your background and interests.</p2><br />
-            <br/>
-            If you are already a graduate student at Harvard (or another area institution) and are interested in our work, contact Michael Desai to discuss opportunities. Include a CV and a brief descriptions of your background and interests.
-        </div>
-        <div class="twelve columns opps">
-            <h4>Postdocs:</h4>
-            <p2>We are not actively looking for postdocs at the moment. However, if you are potentially interested in a postdoc position in theoretical evolutionary dynamics, theoretical population genetics, and experimental evolution (or, ideally, some combination of these) please email Michael Desai. Include a CV and a brief summary of your research interests and experience.</p2>
-        </div>
-        <div class="twelve columns opps">
-            <h4>Undergraduate Students:</h4>
-            <p2>Positions for undergraduate students interested in experimental evolution or evolutionary theory are available. Interested students should contact Michael Desai.</p2>
+            <h2>Internal</h2>
+            <p1>Under construction</p1><br /><br />
         </div>
     </div>
 </div>
