--- a/people/index.html
+++ b/people/index.html
@@ -52,7 +52,7 @@
             <a href="../people"  class="active"><u>People</u></a>
             <a href="../opportunities">Opportunities</a>
             <a href="../contact">Contact</a>
-            <a href="../extra">Extra Fun Stuff</a>
+            <a href="../internal">Internal</a>
             <a href="javascript:void(0);" class="icon" onclick="menu_change()">
                 <i class="fa fa-bars"></i>
             </a>
@@ -145,6 +145,17 @@
     </div>
     <div class="row people_row">
         <div class="two columns">
+            <img src='headshots/nophoto.jpg' style="width:100%">
+        </div>
+        <div class="seven columns">
+            <p1><b>Julian Kates-Harbeck</b></p1><br />
+            <p2>Graduate Student in Physics</p2>
+            <p></p>
+            <p3><i>jkatesharbeck [at] g.harvard.edu</i></p3>
+        </div>
+    </div>    
+    <div class="row people_row">
+        <div class="two columns">
             <img src='headshots/milo.jpg' style="width:100%">
         </div>
         <div class="seven columns">
@@ -207,7 +218,7 @@
         Assistant Professor, University of California San Diego.</p>
         <p><strong><a href="http://unipedalape.weebly.com/">J. David van Dyken</strong></a><br />
         Assistant Professor, University of Miami.</p>
-        <p><strong><a href="http://www.perronlab.org">Gabriel Perron</strong></a><br />
+        <p><strong><a href="http://www.perronlab.net">Gabriel Perron</strong></a><br />
         Assistant Professor, Bard College.</p>
         <p><strong><a href="http://www.ch.cam.ac.uk/person/ljc37">Lucy Colwell</strong></a><br />
         Lecturer (Assistant Professor), Cambridge University.</p>
