--- a/people/index.html
+++ b/people/index.html
@@ -178,12 +178,12 @@
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/nophoto.jpg' style="width:100%">
+            <img src='headshots/katherine.jpg' style="width:100%">
         </div>
         <div class="seven columns">
-            <p1><b>Katherine R. Lawrence</b></p1><br />
+            <p1><b>Katherine Lawrence</b></p1><br />
             <p2>Graduate Student in Physics (MIT)</p2>
-            <p></p>
+            <p>Katherine received her B.S. in Physics from Yale University in 2014, and she joined the Desai lab in 2017. She is interested in high-resolution high-throughput experimental methods to characterize fitness landscapes, including mapping quantitative traits in diverse wild yeast crosses and measuring the binding affinity trajectories of influenza antibodies.</p>
             <p3><i>klawrenc [at] mit.edu</i></p3>
         </div>
     </div>
