--- a/people/index.html
+++ b/people/index.html
@@ -145,12 +145,12 @@
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/nophoto.jpg' style="width:100%">
+            <img src='headshots/julian.jpg' style="width:100%">
         </div>
         <div class="seven columns">
             <p1><b>Julian Kates-Harbeck</b></p1><br />
             <p2>Graduate Student in Physics</p2>
-            <p></p>
+            <p>Julian got his B.S. in Physics and M.S. in Computer Science from Stanford in 2013 and joined the Desai lab in 2015. He uses computational and analytical approaches to study complex contagion processes on structured populations, the spread of reputation on social networks, and models of network growth and attachment.</p>
             <p3><i>jkatesharbeck [at] g.harvard.edu</i></p3>
         </div>
     </div>    
@@ -189,23 +189,23 @@
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/nophoto.jpg' style="width:100%">
+            <img src='headshots/miyagi.jpg' style="width:100%">
         </div>
         <div class="seven columns">
             <p1><b>Michael Miyagi</b></p1><br />
             <p2>Graduate Student in Organismic and Evolutionary Biology</p2>
-            <p></p>
+            <p>Michael received his B.S. in Mathematics and Biology from UT Austin and joined the Desai lab in 2017. He is interested in developing methods to detect introgressed loci and infer recombination rate heterogeneity from sequence data, as well as applications of computational topology to population genetics.</p>
             <p3><i>michael.miyagi [at] gmail.com</i></p3>
         </div>
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/nophoto.jpg' style="width:100%">
+            <img src='headshots/artur.jpg' style="width:100%">
         </div>
         <div class="seven columns">
             <p1><b>Artur Rego-Costa</b></p1><br />
             <p2>Graduate Student in Organismic and Evolutionary Biology</p2>
-            <p></p>
+            <p>Artur first joined the lab on 2017 as an exchange M.S. student, and then as a Ph.D. student in 2018. He earned his B.S from the U. of Brasília, and joint M.S. from U. of Groningen and U. of Montpellier. He is currently using deep-sequencing data from experimentally evolved yeast populations to answers questions about predictability of evolutionary dynamics. </p>
             <p3><i>arturregocosta [at] gmail.com</i></p3>
         </div>
     </div>
