--- a/people/index.html
+++ b/people/index.html
@@ -200,7 +200,7 @@
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/artur.jpg' style="width:100%">
+            <img src='headshots/artur.jpeg' style="width:100%">
         </div>
         <div class="seven columns">
             <p1><b>Artur Rego-Costa</b></p1><br />
