--- a/people/index.html
+++ b/people/index.html
@@ -206,7 +206,7 @@
             <p1><b>Artur Rego-Costa</b></p1><br />
             <p2>Graduate Student in Organismic and Evolutionary Biology</p2>
             <p>Artur first joined the lab on 2017 as an exchange M.S. student, and then as a Ph.D. student in 2018. He earned his B.S from the U. of Brasília, and joint M.S. from U. of Groningen and U. of Montpellier. He is currently using deep-sequencing data from experimentally evolved yeast populations to answers questions about predictability of evolutionary dynamics. </p>
-            <p3><i>arturregocosta [at] gmail.com</i></p3>
+            <p3><i>rego-costa [at] g.harvard.edu</i> <a href="http:/arego-costa.com">[website]</a></p3>
         </div>
     </div>
 
