--- a/people/index.html
+++ b/people/index.html
@@ -200,13 +200,13 @@
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/artur.jpeg' style="width:100%">
+            <img src='headshots/artur.jpg' style="width:100%">
         </div>
         <div class="seven columns">
             <p1><b>Artur Rego-Costa</b></p1><br />
             <p2>Graduate Student in Organismic and Evolutionary Biology</p2>
             <p>Artur first joined the lab on 2017 as an exchange M.S. student, and then as a Ph.D. student in 2018. He earned his B.S from the U. of Brasília, and joint M.S. from U. of Groningen and U. of Montpellier. He is currently using deep-sequencing data from experimentally evolved yeast populations to answers questions about predictability of evolutionary dynamics. </p>
-            <p3><i>rego-costa [at] g.harvard.edu</i> <a href="http:/arego-costa.com">[website]</a></p3>
+            <p3><i>rego-costa [at] g.harvard.edu</i> <a href="http://arego-costa.com">[website]</a></p3>
         </div>
     </div>
 
