--- a/publications/index.html
+++ b/publications/index.html
@@ -63,6 +63,7 @@
     <div class="row">
         <div class="twelve column" style="margin-top: 5%">
             <h4>Publications</h4>
+            [Current/Former lab members in bold. *Co-first contribution. <sup>&#8224</sup>Co-senior authors.]
             <ul id="publication_list">
                 <li><strong>Jerison, E. R.</strong>, <strong>A. N. Nguyen Ba</strong>, <strong>M. M. Desai<sup>&#8224</sup></strong>, and <strong>S. Kryazhimskiy<sup>&#8224</sup></strong>. Chance and Necessity in the Pleiotropic Consequences of Adaptation for Budding Yeast. <em>In review</em>. 
                 <li><strong>Johnson, M. S.</strong>, A. Martsul, <strong>S. Kryazhimskiy<sup>&#8224</sup></strong>, and <strong>M. M. Desai<sup>&#8224</sup></strong>. Higher fitness yeast genotypes are less robust to deleterious mutations. <em>In revision</em>. 
