--- a/publications/index.html
+++ b/publications/index.html
@@ -65,7 +65,7 @@
             <h4>Publications</h4>
             [Current/Former lab members in bold. *Co-first contribution. <sup>&#8224</sup>Co-senior authors.]
             <ul id="publication_list">
-                <li><strong>Jerison, E. R.</strong>, <strong>A. N. Nguyen Ba</strong>, <strong>M. M. Desai<sup>&#8224</sup></strong>, and <strong>S. Kryazhimskiy<sup>&#8224</sup></strong>. Chance and Necessity in the Pleiotropic Consequences of Adaptation for Budding Yeast. <em>In review</em>. 
+                <li><strong>Jerison, E. R.**</strong>, <strong>A. N. Nguyen Ba</strong>, <strong>M. M. Desai<sup>&#8224</sup></strong>, and <strong>S. Kryazhimskiy<sup>&#8224</sup></strong>. Chance and Necessity in the Pleiotropic Consequences of Adaptation for Budding Yeast. <em>In review</em>. 
                 <li><strong>Johnson, M. S.</strong>, A. Martsul, <strong>S. Kryazhimskiy<sup>&#8224</sup></strong>, and <strong>M. M. Desai<sup>&#8224</sup></strong>. Higher fitness yeast genotypes are less robust to deleterious mutations. <em>In revision</em>. 
                 <li><strong>Rice, D. R.</strong>, J. Novembre<sup>&#8224</sup>, and <strong>M. M. Desai<sup>&#8224</sup></strong>. Distinguishing Multiple-Merger From Kingman Coalescence Using Two-site Frequency Spectra. <em>In revision</em>. 
                 <li><strong>Nguyen Ba, A. N.*</strong>, <strong>I. Cvijovic*</strong>, <strong>J. I. R. Echenique*</strong>, <strong>K. R. Lawrence</strong>, <strong>A. Rego-Costa</strong>, X. Liu, S. F. Levy, and <strong>M. M. Desai</strong>. High-Resolution Lineage Tracking Reveals Traveling Wave of Adaptation in Laboratory Yeast. <em>In revision</em>. 
