--- a/publications/index.html
+++ b/publications/index.html
@@ -63,9 +63,8 @@
     <div class="row">
         <div class="twelve column" style="margin-top: 5%">
             <h4>Publications</h4>
-            [Current/Former lab members in bold. *Co-first contribution. <sup>&#8224</sup>Co-senior authors.]
             <ul id="publication_list">
-                <li><strong>Jerison, E. R.**</strong>, <strong>A. N. Nguyen Ba</strong>, <strong>M. M. Desai<sup>&#8224</sup></strong>, and <strong>S. Kryazhimskiy<sup>&#8224</sup></strong>. Chance and Necessity in the Pleiotropic Consequences of Adaptation for Budding Yeast. <em>In review</em>. 
+                <li><strong>Jerison, E. R.</strong>, <strong>A. N. Nguyen Ba</strong>, <strong>M. M. Desai<sup>&#8224</sup></strong>, and <strong>S. Kryazhimskiy<sup>&#8224</sup></strong>. Chance and Necessity in the Pleiotropic Consequences of Adaptation for Budding Yeast. <em>In review</em>. 
                 <li><strong>Johnson, M. S.</strong>, A. Martsul, <strong>S. Kryazhimskiy<sup>&#8224</sup></strong>, and <strong>M. M. Desai<sup>&#8224</sup></strong>. Higher fitness yeast genotypes are less robust to deleterious mutations. <em>In revision</em>. 
                 <li><strong>Rice, D. R.</strong>, J. Novembre<sup>&#8224</sup>, and <strong>M. M. Desai<sup>&#8224</sup></strong>. Distinguishing Multiple-Merger From Kingman Coalescence Using Two-site Frequency Spectra. <em>In revision</em>. 
                 <li><strong>Nguyen Ba, A. N.*</strong>, <strong>I. Cvijovic*</strong>, <strong>J. I. R. Echenique*</strong>, <strong>K. R. Lawrence</strong>, <strong>A. Rego-Costa</strong>, X. Liu, S. F. Levy, and <strong>M. M. Desai</strong>. High-Resolution Lineage Tracking Reveals Traveling Wave of Adaptation in Laboratory Yeast. <em>In revision</em>. 
@@ -124,6 +123,7 @@
                 <li>Plotkin, J. B., J. Dushoff, <strong>M. M.  Desai</strong>, and H. B. Fraser. Estimating  Selection Pressures from Limited Comparative Data. <em>Molecular Biology and Evolution</em> 23:1457-9 (2006). <a href="PDFs/plotkinsdushoffdesaifraser06a.pdf">[pdf]</a>
                 <li><strong>Desai,  M. M.</strong> and D. R. Nelson. A Quasispecies on a Moving Oasis.  <em>Theoretical  Population Biology </em>67:33-45 (2005). <a href="PDFs/desainelson05.pdf">[pdf]</a>
             </ul>
+            [Current/Former lab members in bold. *Co-first authors. <sup>&#8224</sup>Co-senior authors.]
         </div>
     </div>
 </div>
