--- a/people/index.html
+++ b/people/index.html
@@ -226,8 +226,8 @@
         Postdoc, Vastenhouw lab, Max-Planck Institute of Molecular Cell Biology and Genetics.</p>
         <p><strong><a href="http://www.laurenatphysics.com/p/about.html">Lauren Nicolaisen</strong></a><br />
         Data Scientist, Khan Academy.</p>
-        <p><strong><a href="http://hallatscheklab.berkeley.edu/people/benjamin-good/">Benjamin H. Good</strong></a><br />
-        Miller Fellow, UC Berkeley.</p>
+        <p><strong><a href="https://bgoodlab.github.io">Benjamin H. Good</strong></a><br />
+        Assistant Professor, Stanford University.</p>
         <p><strong><a href="https://quakelab.stanford.edu/people/elizabeth-jerison">Elizabeth R. Jerison</strong></a><br />
         Postdoc, Quake Lab, Stanford University.</p>
         <p><strong>Evgeni M. Frenkel</strong><br />
