--- a/people/index.html
+++ b/people/index.html
@@ -82,10 +82,10 @@
             <img src='headshots/jtron.jpg' style="width:100%">
         </div>
         <div class="seven columns">
-            <p1><b>Jenn Thomson</b></p1><br />
+            <p1><b>Melinda Peterson</b></p1><br />
             <p2>Administrative Assistant</p2>
-            <p>Jenn keeps the lab running.</p>
-            <p3><i>jthomson [at] oeb.harvard.edu</i></p3>
+            <p>Melinda keeps the lab running.</p>
+            <p3><i>mpeterson [at] fas.harvard.edu</i></p3>
         </div>
     </div>
     <div class="row people_row">
@@ -101,17 +101,6 @@
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/parris.png' style="width:100%">
-        </div>
-        <div class="seven columns">
-            <p1><b>Parris Humphrey</b></p1><br />
-            <p2>Postdoctoral  Fellow</p2>
-            <p>Parris received his B.A. in Biology from Bard College in 2006. He did his graduate work in Ecology and Evolutionary Biology with Noah Whiteman at the University of Arizona, and received his Ph.D. in 2015. He joined the Desai lab in August 2015.</p>
-            <p3><i>phumphrey [at] fas.harvard.edu</i></p3>
-        </div>
-    </div>    
-    <div class="row people_row">
-        <div class="two columns">
             <img src='headshots/aphillips_01_1.jpg' style="width:100%">
         </div>
         <div class="seven columns">
@@ -123,13 +112,35 @@
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/ivana.jpg' style="width:100%">
+            <img src='headshots/nophoto.jpg' style="width:100%">
         </div>
         <div class="seven columns">
-            <p1><b>Ivana Cvijovic</b></p1><br />
-            <p2>Graduate Student in Systems Biology</p2>
-            <p>Ivana received her B.A. and M.Sc. from Cambridge University in 2013. She joined the Desai lab in 2014, and is currently working on theoretical models of evolution in fluctuating environment, and is interested generally in theoretical population genetics.</p>
-            <p3><i>icvijovic [at] fas.harvard.edu</i></p3>
+            <p1><b>Sudipta Tung</b></p1><br />
+            <p2>Postdoctoral  Fellow</p2>
+            <p></p>
+            <p3><i>sudiptatung [at] fas.harvard.edu</i></p3>
+        </div>
+    </div>    
+    <div class="row people_row">
+        <div class="two columns">
+            <img src='headshots/nophoto.jpg' style="width:100%">
+        </div>
+        <div class="seven columns">
+            <p1><b>Thomas Dupic</b></p1><br />
+            <p2>Postdoctoral Fellow</p2>
+            <p></p>
+            <p3><i> [at] </i></p3>
+        </div>
+    </div>
+    <div class="row people_row">
+        <div class="two columns">
+            <img src='headshots/nophoto.jpg' style="width:100%">
+        </div>
+        <div class="seven columns">
+            <p1><b>Mark Margres</b></p1><br />
+            <p2>Hrdy Postdoctoral Fellow</p2>
+            <p></p>
+            <p3><i> mark_margres [at] fas.harvard.edu </i></p3>
         </div>
     </div>
     <div class="row people_row">
@@ -142,18 +153,7 @@
             <p>Matthew received his B.S. in Engineering Physics from UC Berkeley in 2014. He joined the Desai Lab in October 2015, and is interested in using yeast surface display to characterize antibody-antigen binding affinities.</p>
             <p3><i>mjmel [at] fas.harvard.edu</i></p3>
         </div>
-    </div>
-    <div class="row people_row">
-        <div class="two columns">
-            <img src='headshots/julian.jpg' style="width:100%">
-        </div>
-        <div class="seven columns">
-            <p1><b>Julian Kates-Harbeck</b></p1><br />
-            <p2>Graduate Student in Physics</p2>
-            <p>Julian got his B.S. in Physics and M.S. in Computer Science from Stanford in 2013 and joined the Desai lab in 2015. He uses computational and analytical approaches to study complex contagion processes on structured populations, the spread of reputation on social networks, and models of network growth and attachment.</p>
-            <p3><i>jkatesharbeck [at] g.harvard.edu</i></p3>
-        </div>
-    </div>    
+    </div>   
     <div class="row people_row">
         <div class="two columns">
             <img src='headshots/milo.jpg' style="width:100%">
@@ -209,6 +209,72 @@
             <p3><i>rego-costa [at] g.harvard.edu</i> <a href="http://arego-costa.com">[website]</a></p3>
         </div>
     </div>
+    <div class="row people_row">
+        <div class="two columns">
+            <img src='headshots/nophoto.jpg' style="width:100%">
+        </div>
+        <div class="seven columns">
+            <p1><b>Shreyas Gopalkrishna</b></p1><br />
+            <p2>Graduate Student in Molecules, Cells, and Organisms</p2>
+            <p></p>
+            <p3><i>gopalakr.shreyas [at] gmail.com</a></p3>
+        </div>
+    </div>
+    <div class="row people_row">
+        <div class="two columns">
+            <img src='headshots/nophoto.jpg' style="width:100%">
+        </div>
+        <div class="seven columns">
+            <p1><b>Alief Moulana</b></p1><br />
+            <p2>Graduate Student in Organismic and Evolutionary Biology</p2>
+            <p></p>
+            <p3><i>amoulana [at] g.harvard.edu</a></p3>
+        </div>
+    </div>
+    <div class="row people_row">
+        <div class="two columns">
+            <img src='headshots/nophoto.jpg' style="width:100%">
+        </div>
+        <div class="seven columns">
+            <p1><b>Tanush Jagdish</b></p1><br />
+            <p2>Graduate Student in Systems, Synthetic, and Quantitative Biology</p2>
+            <p></p>
+            <p3><i>tanush [at] g.harvard.edu</a></p3>
+        </div>
+    </div>
+    <div class="row people_row">
+        <div class="two columns">
+            <img src='headshots/nophoto.jpg' style="width:100%">
+        </div>
+        <div class="seven columns">
+            <p1><b>Jiseon Min</b></p1><br />
+            <p2>Graduate Student in Molecules, Cells, and Organisms</p2>
+            <p></p>
+            <p3><i>jiseonmin [at] g.harvard.edu</a></p3>
+        </div>
+    </div>
+    <div class="row people_row">
+        <div class="two columns">
+            <img src='headshots/nophoto.jpg' style="width:100%">
+        </div>
+        <div class="seven columns">
+            <p1><b>Divvya Ramesh</b></p1><br />
+            <p2>Undergraduate Intern</p2>
+            <p></p>
+            <p3><i>dramesh [at] fas.harvard.edu</a></p3>
+        </div>
+    </div>
+    <div class="row people_row">
+        <div class="two columns">
+            <img src='headshots/nophoto.jpg' style="width:100%">
+        </div>
+        <div class="seven columns">
+            <p1><b>Juhee Goyal</b></p1><br />
+            <p2>Undergraduate Researcher</p2>
+            <p></p>
+            <p3><i>juheegoyal [at] college.harvard.edu</a></p3>
+        </div>
+    </div>
 
     <div class="alumni">
         <p><strong><u>Lab Alumni</u><p></strong>
@@ -222,6 +288,8 @@
         Assistant Professor, Bard College.</p>
         <p><strong><a href="http://www.ch.cam.ac.uk/person/ljc37">Lucy Colwell</strong></a><br />
         Lecturer (Assistant Professor), Cambridge University.</p>
+        <p><strong><a href="https://sites.google.com/view/ivanacvijovic/home">Ivana Cvijovic</strong></a><br />
+        Lewis-Sigler Fellow, Princeton University.</p>
         <p><strong>Ramya Purkanti</strong><br />
         Postdoc, Vastenhouw lab, Max-Planck Institute of Molecular Cell Biology and Genetics.</p>
         <p><strong><a href="http://www.laurenatphysics.com/p/about.html">Lauren Nicolaisen</strong></a><br />
@@ -242,6 +310,11 @@
         Graduate Student, UC Berkeley.</p>
         <p><strong>Ian Ochs</strong></a><br />
         Graduate Student, Princeton University.</p>
+        <p><strong>Julian Kates-Harbeck</strong></a><br />
+        </p>
+        <p><strong>Parris Humphrey</strong></a><br />
+        Bioinformatics Scientist, Myriad Genetics</p>
+        
     </div>
 </div>
 
