--- a/publications/index.html
+++ b/publications/index.html
@@ -64,7 +64,7 @@
         <div class="twelve column" style="margin-top: 5%">
             <h4>Publications</h4>
             <ul id="publication_list">
-                <li><strong>Kates-Harbeck, Julian</strong>, M. A. Nowak, and <strong>M. M. Desai</strong>. Social network structure and the spread of complex contagions. <em>In review</em>. 
+                <li><strong>Kates-Harbeck, J.</strong>, M. A. Nowak, and <strong>M. M. Desai</strong>. Social network structure and the spread of complex contagions. <em>In review</em>. 
                 <li><strong>Jerison, E. R.</strong>, <strong>A. N. Nguyen Ba</strong>, <strong>M. M. Desai<sup>&#8224</sup></strong>, and <strong>S. Kryazhimskiy<sup>&#8224</sup></strong>. Chance and Necessity in the Pleiotropic Consequences of Adaptation for Budding Yeast. <em>In review</em>. 
                 <li><strong>Rice, D. R.</strong>, J. Novembre<sup>&#8224</sup>, and <strong>M. M. Desai<sup>&#8224</sup></strong>. Distinguishing Multiple-Merger From Kingman Coalescence Using Two-site Frequency Spectra. <em>In revision</em>. 
                 <li><strong>Desai, M. M.</strong> Haigh (1978) and Muller's ratchet. <em>Theoretical Population Biology, in press</em>.
