--- a/people/index.html
+++ b/people/index.html
@@ -95,7 +95,7 @@
         <div class="seven columns">
             <p1><b>Alex Nguyen-Ba</b></p1><br />
             <p2>Postdoctoral  Fellow</p2>
-            <p>Alex got his B.Sc. in Biology at the University of Toronto, and did his Ph.D. in Alan Moses' lab at the University of Toronto. He is interested in characterizing patterns of epistasis in budding yeast, in the evolution of complex mating systems, and a variety of other topics related to evolutionary dynamics and experimental evolution.</p>
+            <p>Alex got his B.Sc. in Biology at the University of Toronto, and did his Ph.D. in Alan Moses' lab at the University of Toronto. He is interested in developing high-resolution and high-throughput techniques to observe evolution in real time and answer fundamental questions in quantitative genetics.</p>
             <p3><i>nnguyenba [at] fas.harvard.edu</i></p3>
         </div>
     </div>
@@ -112,13 +112,13 @@
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/nophoto.jpg' style="width:100%">
+            <img src='headshots/sudipta.jpg' style="width:100%">
         </div>
         <div class="seven columns">
             <p1><b>Sudipta Tung</b></p1><br />
             <p2>Postdoctoral  Fellow</p2>
-            <p></p>
-            <p3><i>sudiptatung [at] fas.harvard.edu</i></p3>
+            <p>Sudipta did his Ph.D. in Biological Sciences at IISER Pune, India, in Sutirth Dey’s lab, where he empirically studied several methods to stabilize extinction-prone populations and dispersal evolution using common fruitfly, Drosophila as a model organism. Sudipta is currently interested in understanding the impact of different factors influencing evolutionary dynamics in budding yeast, particularly in the context of spatially structured.</p>
+            <p3><i>sudiptatung [at] fas.harvard.edu</i> <a href="https://sites.google.com/site/sudiptatung/">[website]</a></p3>
         </div>
     </div>    
     <div class="row people_row">
