--- a/people/index.html
+++ b/people/index.html
@@ -244,12 +244,12 @@
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/nophoto.jpg' style="width:100%">
+            <img src='headshots/jiseon.jpg' style="width:100%">
         </div>
         <div class="seven columns">
             <p1><b>Jiseon Min</b></p1><br />
             <p2>Graduate Student in Molecules, Cells, and Organisms</p2>
-            <p></p>
+            <p>Jiseon is broadly interested in developing mathematical models on living systems motivated by probability theory and statistical physics. She received her B.S. in Physics from Caltech in 2018 and joined the Desai lab in 2019. She is currently interested in understanding genetic diversity and temporal dynamics in different regimes.</p>
             <p3><i>jiseonmin [at] g.harvard.edu</a></p3>
         </div>
     </div>
