--- a/people/index.html
+++ b/people/index.html
@@ -79,7 +79,7 @@
     </div>
     <div class="row people_row">
         <div class="two columns">
-            <img src='headshots/jtron.jpg' style="width:100%">
+            <img src='headshots/nophoto.jpg' style="width:100%">
         </div>
         <div class="seven columns">
             <p1><b>Melinda Peterson</b></p1><br />
